--- a/references/MB1136_C05/MB1136.PcbDoc.htm
+++ b/references/MB1136_C05/MB1136.PcbDoc.htm
@@ -126,12 +126,12 @@
             <tr class="front_matter">
             <td class="front_matter_column1">Date</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">12/3/2023</td>
+            <td class="front_matter_column3">12/5/2023</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Time</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">11:03:38 PM</td>
+            <td class="front_matter_column3">10:10:24 AM</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Filename</td>
